--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </div>
     <div class="digital">--:--:--</div>
 
-    
+    <footer>Criado pela B7Web</footer>
+
 
     <script src="script.js"></script>
 </body>
